syntax = "proto3";


option go_package = "github.com/samarthasthan/21BRS1248_Backend/proto_go";

service FileService {
  // Upload file method
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);

  // Get file metadata method
  rpc GetFileMetadata(FileMetadataRequest) returns (FileMetadataResponse);
}

// Request to upload file
message UploadFileRequest {
  string email = 1;   
  bytes file_data = 2;  
  string file_name = 3; 
}

// Response after uploading the file
message UploadFileResponse {
  bool success = 1;
  string message = 2;
  string file_id = 3; // ID of the uploaded file
}

// Request to get file metadata
message FileMetadataRequest { string file_id = 1; }

// Response for file metadata
message FileMetadataResponse {
  bool is_processed = 1;
  string storage_location = 2;
}

// Files by user
message FilesByUserRequest { string email = 1; }

message FilesByUserResponse {
  repeated File files = 1;
}

message File {
  string file_id = 1;
  string file_name = 2;
  string file_size = 3;
  string storage_location = 4;
  string upload_date = 5;
  bool is_processed = 6;
  string expired_at = 7;
}